# open-native

./: .gitattributes  .gitignore  .release-it.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: CI.yml  Release.yml
__test__/: index.spec.ts
src/: lib.rs  linux_impl.rs  macos_impl.rs  windows_impl.rs
