
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2024"
name    = "open_native"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.8.2"
napi-derive = "3.5.1"

[target."cfg(target_os = \"windows\")".dependencies.windows]
features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Com",
]
version = "0.62.2"

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto   = true
strip = "symbols"
